--- a/RisoDjango/core/templates/cadastro_cliente.html
+++ b/RisoDjango/core/templates/cadastro_cliente.html
@@ -54,7 +54,7 @@
                 </div>
             
                 <div class="text-center mb-3">
-                    <a href="home.html" class="btn btn-secondary btn-lg btn-block">Cancelar Cadastro</a>
+                    <a href="{% url 'index' %}" class="btn btn-secondary btn-lg btn-block">Cancelar Cadastro</a>
                 </div>
             </form>
             
