--- a/RisoDjango/core/templates/dashboard.html
+++ b/RisoDjango/core/templates/dashboard.html
@@ -27,7 +27,7 @@
         <a href="#" class="flex items-center px-4 py-3 rounded-lg bg-orange-500 text-white">
           <i data-lucide="bar-chart-3" class="w-5 h-5 mr-3"></i> Dashboard
         </a>
-        <a href="#" class="flex items-center px-4 py-3 rounded-lg hover:bg-slate-800">
+        <a href="{% url 'listar_clientes' %}" class="flex items-center px-4 py-3 rounded-lg hover:bg-slate-800">
           <i data-lucide="users" class="w-5 h-5 mr-3"></i> Clientes
         </a>
         <!-- continue para os outros links... -->
