--- a/RisoDjango/core/templates/login.html
+++ b/RisoDjango/core/templates/login.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="col-md-6 d-none d-md-flex align-items-center justify-content-center">
-        <img src="{% static 'imagem/images.png' %}" alt="Logo RISO" class="img-fluid" style="max-height: 500px;">
+        <img src="{% static 'assets/images.png' %}" alt="Logo RISO" class="img-fluid" style="max-height: 500px;">
     </div>
 </div>
 </body>
