--- a/RisoDjango/core/templates/cadastro_cliente.html
+++ b/RisoDjango/core/templates/cadastro_cliente.html
@@ -1,46 +1,9 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>Cadastro de Clientes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cadastro_cliente.css">
-    <style>
-        .container {
-            height: 120vh;
-        }
 
-        body {
-            background-color: #000;
-            height: 100%;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+{% block title %}Lista de Clientes{% endblock %}
 
-        .cadastro_cliente-container {
-            background-color: #949494;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #000;
-            width: 100%;
-        }
-
-        .form-control::placeholder {
-            color: #aaa;
-        }
-
-        .error-box {
-            margin-bottom: 20px;
-        }
-    </style>
-</head>
-<body>
+{% block content %}
 <div class="container d-flex justify-content-center align-items-center">
     <div class="col-md-6 d-flex align-items-center">
         <div class="cadastro_cliente-container w-100">
@@ -102,6 +65,12 @@
         </div>
     </div>
 </div>
-</body>
-<script src="{% static '/utils/InputMaskScript.js' %}"></script>
-</html>
+{% endblock %}
+
+{% block scripts %}
+<script src="{% static 'utils/InputMaskScript.js' %}"></script>
+{% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'style/cadastro_cliente.css' %}">
+{% endblock %}
