--- a/RisoDjango/core/templates/listar_clientes.html
+++ b/RisoDjango/core/templates/listar_clientes.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Lista de Clientes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'base.html' %}
+
+{% block title %}Lista de Clientes{% endblock %}
+
+{% block content %}
   <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Lista de Clientes</h2>
@@ -34,5 +30,5 @@
   </tbody>
 </table>
   </div>
-</body>
-</html>
+
+{% endblock %}
